# libfidwid

./: .gitignore  Makefile.am  README.md  configure.ac  configure.in
debian/: changelog  control  copyright  libfidwid-dev.files  rules
scripts/: Makefile.am  package-config.in  package-local-config.in
src/: Makefile.am
src/libfidwid/: FastImageDisplayWid.cc  FastImageDisplayWid.hh  FastImageDisplayWid.icc  FastImageDisplayWid_Templ.hh  FastImageDisplayWid_Templ.icc  Makefile.am  OpenGLFidWidget.cc  OpenGLFidWidget.hh  OpenGLFidWidget.icc  PixelConverter.cc  PixelConverter.hh  PixelConverter.icc  X11FidWidget.cc  X11FidWidget.hh  X11FidWidget.icc
src/testFidWid/: Makefile.am  test.ppm  testFidWid.cc
